# project-mem-mcp

./: CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: dream-consolidator.md
plugin/commands/: dream.md
plugin/hooks/: hooks.json
plugin/scripts/: auto-read.sh  auto_read.py  block_subagent_writes.py  check-dream.sh  check_dream.py  continuous_save_prime.py  insight_save_nudge.py  memory_nudge.py  update_dream_timestamp.py
plugin/skills/dream/: SKILL.md
plugin/skills/memory/: SKILL.md
plugin/skills/project-memory/: SKILL.md
src/project_mem_mcp/: server.py
