[project]
name = "project-mem-mcp"
version = "0.3.0"
description = "An MCP Server to store and retreive project information from memory file"
authors = [{ name = "PYNESYS LLC" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = ["fastmcp>=3.2.0, <4.0.0"]

[project.scripts]
project-mem-mcp = "project_mem_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
